<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.proprog.my_todo.viewmodel.TaskViewModel" />
    </data>

    <ScrollView
        android:id="@+id/scroll_input"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_title_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_task_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_input_task_name"
                    android:inputType="text"
                    android:text="@={vm.taskName}" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_date_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <EditText
                    android:id="@+id/input_task_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_action_date"
                    android:focusableInTouchMode="false"
                    android:hint="@string/text_input_task_date"
                    android:inputType="date"
                    android:text="@={vm.taskDate}" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_time_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <EditText
                    android:id="@+id/input_task_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_action_time"
                    android:focusableInTouchMode="false"
                    android:hint="@string/text_input_task_time"
                    android:inputType="time"
                    android:text="@={vm.taskTime}" />
            </android.support.design.widget.TextInputLayout>


            <Spinner
                android:id="@+id/spinner_task_type"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_margin="8dp"
                android:entries="@array/task_types"
                android:padding="4dp"
                android:prompt="@string/spinner_prompt" />

            <CheckBox
                android:id="@+id/chk_box_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:text="@string/task_status" />

            <Button
                android:id="@+id/btn_save_task"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/btn_text_save_task"
                android:textColor="@color/white_color"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</layout>